--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.3",
     "@nuxtjs/axios": "^5.12.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "graphql": "^15.3.0",
     "nuxt": "^2.14.0",
     "uikit": "^3.5.6"
   },
@@ -28,10 +31,10 @@
     "eslint-plugin-node": ">=11.0.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5",
     "eslint-plugin-promise": ">=4.2.1",
     "eslint-plugin-standard": ">=4.0.1",
     "eslint-plugin-vue": "^6.2.2",
-    "lint-staged": "^10.0.8"
+    "lint-staged": "^10.0.8",
+    "prettier": "^2.0.5"
   }
 }
