--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@nuxtjs/apollo": "^4.0.1-rc.3",
     "@nuxtjs/axios": "^5.12.0",
     "apollo-cache-inmemory": "^1.6.6",
+    "cookieparser": "^0.1.0",
     "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.0",
+    "strapi-sdk-javascript": "^0.3.3",
     "uikit": "^3.5.6"
   },
   "devDependencies": {
