--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "js-cookie": "^2.2.1",
     "nuxt": "^2.14.0",
     "strapi-sdk-javascript": "^0.3.3",
-    "uikit": "^3.5.6"
+    "uikit": "^3.5.6",
+    "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
